--- a/pack.yaml
+++ b/pack.yaml
@@ -1,5 +1,5 @@
 ---
-ref: my_st2_pack
+ref: stackstorm
 name: "My Stackstorm Pack"
 description: Collection of rules, sensors, workflows, and actions.
 version: 0.0.1
